--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -10,6 +10,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
+    - name: Set up Python 3.9
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.9
     - name: Log Python location
       run: which python
     - name: Scrape
@@ -18,6 +22,13 @@ jobs:
     - name: Pretty Print the JSON
       run: |
         cat data/sce-electrical-outages-raw.json | python -m json.tool > data/sce-electrical-outages.json
-    - uses: mikeal/publish-to-github-action@master
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # GitHub sets this for you
+    - name: Commit new data
+      run: |
+        git config user.name github-actions
+        git config user.email github-actions@github.com
+        git add data/
+        if [[ -n "$(git status -s -- data/)" ]]; then
+          TIMESTAMP_NOW=`date -u +"%Y-%m-%dT%H:%M:%SZ"`
+          git commit -m "data scraped at $TIMESTAMP_NOW"
+          git push
+        fi
